projects/compiler/test/typechecker/unary/error_minus.2.out
Error at %FILE_NAME%:1:2
Type mismatch
  |  -true
      ^
Expected one of: Int, Float
but instead found: Bool
